[package]
name = "ETHWallet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
ethers = { version = "2", features = ["rustls", "ws"] }
tokio = { version = "1", features = ["full"] }
aes = "0.8"
sha3 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.27", features = ["rand", "global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.21"
eyre = "0.6.12"
sodiumoxide = "0.2"
scrypt = "0.10"
zeroize = "1.5"
rpassword = "7.2"
qrcode = "0.14.1"
